Entity Framework Configuration Finished. Account Controller finished.

--- a/Project1.API/packages/repositories.config
+++ b/Project1.API/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Project1.API\packages.config" />
+  <repository path="..\Project1.Data\packages.config" />
 </repositories>
